--- a/NLB/app/src/main/res/layout/activity_parents_register.xml
+++ b/NLB/app/src/main/res/layout/activity_parents_register.xml
@@ -32,7 +32,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
+                android:layout_gravity="right"
+                android:layout_marginEnd="20dp"
                 android:layout_marginTop="30dp"
                 android:orientation="vertical">
 
@@ -245,7 +246,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="38dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:orientation="horizontal">
 
@@ -255,6 +256,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:popupBackground="@color/nlb_blue"
                         android:layout_weight="1" />
 
                     <TextView
