--- a/NLB/app/src/main/res/layout/customized_spinner.xml
+++ b/NLB/app/src/main/res/layout/customized_spinner.xml
@@ -1,8 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@android:color/holo_purple"
-    android:layout_height="match_parent">
 
     <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,7 +6,6 @@
         android:textSize="20sp"
         android:gravity="right"
         android:textColor="@android:color/white"
+        android:fontFamily="@font/ozrad_bold"
         android:padding="5dip"
         />
-
-</LinearLayout>
