--- a/NLB/app/src/main/res/layout/activity_parents_login.xml
+++ b/NLB/app/src/main/res/layout/activity_parents_login.xml
@@ -22,6 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:backgroundTint="@android:color/white"
         android:ems="10"
         android:gravity="left"
         android:inputType="textEmailAddress"
@@ -32,6 +35,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:textColorHint="@android:color/white"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@android:color/white"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPassword"
@@ -45,6 +51,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/button_design"
         android:fontFamily="@font/ozrad_bold"
+        android:textColor="@android:color/white"
         android:text="@string/התחברות"
         android:textSize="30dp"
         android:textStyle="bold" />
@@ -56,6 +63,7 @@
         android:background="@drawable/button_design"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
+        android:textColor="@android:color/white"
         android:text="@string/הורים_הרשמה"
         android:textStyle="bold"
         android:fontFamily="@font/ozrad_bold"
