--- a/NLB/app/src/main/res/layout/activity_parents_register.xml
+++ b/NLB/app/src/main/res/layout/activity_parents_register.xml
@@ -48,6 +48,7 @@
                         android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:hint="שם פרטי"
+                        android:textColor="@android:color/white"
                         android:inputType="textPersonName"
                         android:textColorHint="@android:color/white"
                         android:backgroundTint="@android:color/white"
@@ -76,6 +77,7 @@
                         android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:hint="שם משפחה"
+                        android:textColor="@android:color/white"
                         android:inputType="textPersonName"
                         android:textColorHint="@android:color/white"
                         android:backgroundTint="@android:color/white"
@@ -104,6 +106,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:hint="מספר זהות"
+                        android:textColor="@android:color/white"
                         android:inputType="number"
                         android:textColorHint="@android:color/white"
                         android:backgroundTint="@android:color/white"
@@ -135,6 +138,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:hint="אימייל"
+                        android:textColor="@android:color/white"
                         android:inputType="textEmailAddress"
                         android:textColorHint="@android:color/white"
                         android:backgroundTint="@android:color/white"
@@ -164,6 +168,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:hint="סיסמא"
+                        android:textColor="@android:color/white"
                         android:inputType="textPassword"
                         android:textColorHint="@android:color/white"
                         android:gravity="end"
@@ -196,6 +201,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:hint="עיר מגורים"
+                        android:textColor="@android:color/white"
                         android:inputType="textPersonName"
                         android:textColorHint="@android:color/white"
                         android:backgroundTint="@android:color/white"
@@ -226,6 +232,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:hint="רחוב ומספר"
+                        android:textColor="@android:color/white"
                         android:inputType="textPersonName"
                         android:textColorHint="@android:color/white"
                         android:backgroundTint="@android:color/white"
@@ -265,7 +272,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/ozrad_bold"
-                        android:text="@string/סניף_הבית"
+                        android:text="@string/סניף"
                         android:textColor="@android:color/white"
                         android:layout_gravity="center"
                         android:textSize="20sp"
@@ -285,6 +292,7 @@
                         android:layout_marginLeft="10dp"
                         android:hint="מספר טלפון"
                         android:inputType="number"
+                        android:textColor="@android:color/white"
                         android:textColorHint="@android:color/white"
                         android:backgroundTint="@android:color/white"
                         android:textSize="20sp"
