--- a/NLB/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/NLB/app/src/main/res/layout/activity_welcome_screen.xml
@@ -28,6 +28,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="80dp"
         android:text="@string/כניסת_הורים"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         android:fontFamily="@font/ozrad_bold"
         android:textSize="30dp"
@@ -40,6 +41,7 @@
         android:background="@drawable/button_design"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
+        android:textColor="@android:color/white"
         android:text="@string/כניסת_רכזים"
         android:fontFamily="@font/ozrad_bold"
         android:textStyle="bold"
