--- a/NLB/app/src/main/res/layout/activity_parents_update.xml
+++ b/NLB/app/src/main/res/layout/activity_parents_update.xml
@@ -178,6 +178,7 @@
                             android:id="@+id/homeBranchUpdate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:popupBackground="@color/nlb_blue"
                             android:layout_gravity="center"
                             android:layout_weight="1" />
 
