--- a/NLB/app/src/main/res/layout/activity_add_child.xml
+++ b/NLB/app/src/main/res/layout/activity_add_child.xml
@@ -137,7 +137,7 @@
                         android:backgroundTint="@android:color/white"
                         android:hint="@string/מספר"
                         android:textColor="@android:color/white"
-                        android:inputType="textPersonName"
+                        android:inputType="number"
                         android:textColorHint="@android:color/white"
                         android:textSize="20sp" />
 
@@ -218,7 +218,7 @@
                         android:backgroundTint="@android:color/white"
                         android:hint="אימייל (לא חובה)"
                         android:textColor="@android:color/white"
-                        android:inputType="textPersonName"
+                        android:inputType="textEmailAddress"
                         android:textColorHint="@android:color/white"
                         android:textSize="20sp" />
 
