--- a/NLB/app/src/main/res/layout/activity_register.xml
+++ b/NLB/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/nlb_bground"
-    tools:context=".parents_register">
+    tools:context=".register">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 android:layout_marginTop="50dp"
                 android:fontFamily="@font/ozrad_bold"
                 android:gravity="center_horizontal"
-                android:text="@string/הורים_הרשמה"
+                android:text="@string/הרשמה"
                 android:textColor="@android:color/white"
                 android:textSize="30sp"
                 android:textStyle="bold" />
