--- a/NLB/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/NLB/app/src/main/res/layout/activity_welcome_screen.xml
@@ -13,21 +13,48 @@
         android:id="@+id/nlb_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
         android:background="@color/blank"
         android:layout_gravity="center_horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/nlb_logo_removedbg" />
 
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:backgroundTint="@android:color/white"
+        android:ems="10"
+        android:gravity="left"
+        android:inputType="textEmailAddress"
+        android:hint="@string/אימייל" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColorHint="@android:color/white"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@android:color/white"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="@string/סיסמא" />
+
     <Button
-        android:id="@+id/parents_login"
-        android:layout_width="215dp"
+        android:id="@+id/login"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button_design"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
-        android:text="@string/כניסת_הורים"
+        android:layout_marginTop="70dp"
+        android:text="@string/התחברות"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:fontFamily="@font/ozrad_bold"
@@ -35,16 +62,17 @@
         />
 
     <Button
-        android:id="@+id/coordinators_login"
-        android:layout_width="215dp"
+        android:id="@+id/register"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button_design"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/הרשמה"
         android:textColor="@android:color/white"
-        android:text="@string/כניסת_רכזים"
-        android:fontFamily="@font/ozrad_bold"
         android:textStyle="bold"
-        android:textSize="30dp"/>
+        android:fontFamily="@font/ozrad_bold"
+        android:textSize="30dp"
+        />
 
 </LinearLayout>
