--- a/NLB/app/src/main/res/layout/activity_admins_workers.xml
+++ b/NLB/app/src/main/res/layout/activity_admins_workers.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/nlb_bground"
-    tools:context=".parents_children">
-
+    tools:context=".admins_workers">
 
     <TextView
         android:id="@+id/children_title"
@@ -16,7 +15,7 @@
         android:layout_marginTop="50dp"
         android:fontFamily="@font/ozrad_bold"
         android:gravity="center_horizontal"
-        android:text="@string/ילדים"
+        android:text="@string/עובדים"
         android:textColor="@android:color/white"
         android:textSize="40sp"
         android:textStyle="bold" />
@@ -26,7 +25,7 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/child_listview"
+            android:id="@+id/worker_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="15dp"
@@ -36,7 +35,7 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_fab_child"
+            android:id="@+id/add_fab_worker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/add"
