'add_worker' Activity Coded

--- a/NLB/app/src/main/res/layout/activity_admins_workers.xml
+++ b/NLB/app/src/main/res/layout/activity_admins_workers.xml
@@ -9,7 +9,7 @@
     tools:context=".admins_workers">
 
     <TextView
-        android:id="@+id/children_title"
+        android:id="@+id/workers_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
