--- a/NLB/app/src/main/res/layout/activity_add_worker.xml
+++ b/NLB/app/src/main/res/layout/activity_add_worker.xml
@@ -114,18 +114,39 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btnEndDate"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/button_design"
-            android:fontFamily="@font/ozrad_bold"
-            android:text="@string/בחר_תאריך_סיום"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnEndDate"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/button_design"
+                android:fontFamily="@font/ozrad_bold"
+                android:text="@string/בחר_תאריך_סיום"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/emailEndDateNote"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="dp"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/ozrad_bold"
+                android:text="@string/תאריך_סיום_עובד_הערה"
+                android:textColor="@android:color/white"
+                android:textSize="13sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
     </LinearLayout>
 
