--- a/NLB/app/src/main/res/layout/activity_admins_hub.xml
+++ b/NLB/app/src/main/res/layout/activity_admins_hub.xml
@@ -28,7 +28,7 @@
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/onlineStore"
+            android:id="@+id/workersAdmin"
             android:layout_width="175dp"
             android:layout_height="170dp"
             android:layout_gravity="center"
@@ -43,7 +43,6 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/online_store"
                     android:layout_width="130dp"
                     android:layout_height="120dp"
                     android:layout_gravity="center_horizontal"
@@ -64,7 +63,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/myProfile"
+            android:id="@+id/myProfileAdmin"
             android:layout_width="175dp"
             android:layout_height="170dp"
             android:layout_gravity="center"
