--- a/NLB/app/src/main/res/layout/activity_add_worker.xml
+++ b/NLB/app/src/main/res/layout/activity_add_worker.xml
@@ -139,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
                 android:fontFamily="@font/ozrad_bold"
                 android:text="@string/תאריך_סיום_עובד_הערה"
