--- a/NLB/app/src/main/res/layout/worker_listview.xml
+++ b/NLB/app/src/main/res/layout/worker_listview.xml
@@ -53,7 +53,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/worker_Role"
+                    android:id="@+id/worker_role"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/ozrad_bold"
@@ -93,7 +93,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/child_profile"
+                    android:id="@+id/worker_profile"
                     android:layout_width="170dp"
                     android:layout_height="170dp"
                     android:layout_gravity="center"
