--- a/NLB/app/src/main/res/layout/child_listview.xml
+++ b/NLB/app/src/main/res/layout/child_listview.xml
@@ -110,14 +110,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="35dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/child_profile"
-                    android:layout_width="170dp"
-                    android:layout_height="170dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="0dp"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_gravity="left"
+                    android:layout_marginStart="5dp"
                     app:srcCompat="@drawable/nlb_logo_removedbg" />
 
                 <TextView
