--- a/NLB/app/src/main/res/layout/worker_listview.xml
+++ b/NLB/app/src/main/res/layout/worker_listview.xml
@@ -25,7 +25,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -74,17 +74,6 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/worker_endDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/ozrad_bold"
-                    android:text="TextView"
-                    android:gravity="left"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -94,10 +83,10 @@
 
                 <ImageView
                     android:id="@+id/worker_profile"
-                    android:layout_width="170dp"
-                    android:layout_height="170dp"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
                     android:layout_gravity="center"
-                    android:layout_marginStart="0dp"
+                    android:layout_margin="20dp"
                     app:srcCompat="@drawable/nlb_logo_removedbg" />
 
             </LinearLayout>
