--- a/NLB/app/src/main/res/layout/activity_guides_activities.xml
+++ b/NLB/app/src/main/res/layout/activity_guides_activities.xml
@@ -32,6 +32,19 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/btnDownloadFile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="3dp"
+        android:background="@drawable/button_design"
+        android:fontFamily="@font/ozrad_bold"
+        android:text="@string/הורדת_קובץ"
+        android:textColor="@android:color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
