--- a/NLB/app/src/main/res/layout/activity_guides_hub.xml
+++ b/NLB/app/src/main/res/layout/activity_guides_hub.xml
@@ -20,39 +20,84 @@
         android:textSize="40sp"
         android:textStyle="bold" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/myActivites"
-        android:layout_width="175dp"
-        android:layout_height="170dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        app:cardBackgroundColor="@color/nlb_blue"
-        app:cardCornerRadius="30dp">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80dp"
+        android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="130dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15sp"
-                android:layout_marginEnd="5dp"
-                app:srcCompat="@drawable/activities_100px" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/logout"
+            android:layout_width="175dp"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="10dp"
+            app:cardBackgroundColor="@color/nlb_blue"
+            app:cardCornerRadius="30dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/ozrad_bold"
-                android:text="@string/פעולות"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/logoutImg"
+                    android:layout_width="130dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginEnd="5dp"
+                    app:srcCompat="@drawable/logout_100px" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/ozrad_bold"
+                    android:text="@string/התנתקות"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/myActivites"
+            android:layout_width="175dp"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            app:cardBackgroundColor="@color/nlb_blue"
+            app:cardCornerRadius="30dp">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="130dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginEnd="5dp"
+                    app:srcCompat="@drawable/activities_100px" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/ozrad_bold"
+                    android:text="@string/פעולות"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
