Almost Final Project?
Finished previewing the list of registered activities for parents

--- a/NLB/app/src/main/res/layout/activity_parents_hub.xml
+++ b/NLB/app/src/main/res/layout/activity_parents_hub.xml
@@ -28,7 +28,7 @@
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/onlineStore"
+            android:id="@+id/activitiesList"
             android:layout_width="175dp"
             android:layout_height="170dp"
             android:layout_gravity="center"
