--- a/NLB/app/src/main/res/layout/activity_my_messages.xml
+++ b/NLB/app/src/main/res/layout/activity_my_messages.xml
@@ -29,7 +29,8 @@
             android:id="@+id/my_messages_lsview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout_editor_absoluteY="642dp" >
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         </ListView>
 
